--- a/session33/demo.html
+++ b/session33/demo.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./demo.css">
-  </head>
-  <body>
-    <div class="container" id="container"></div>
+    <link rel="stylesheet" href="./demo.css" />
+</head>
 
-    <div class="modal" id="modal">
-      <img src="" alt="" />
+<body>
+    <h1>Cửa hàng Đơn giản</h1>
+
+    <div class="container">
+        <div class="products-container">
+            <h2>Sản phẩm</h2>
+            <div class="product-grid" id="product-grid"></div>
+        </div>
+
+        <div class="cart-container">
+            <h2>Giỏ hàng</h2>
+            <div id="cart-items">
+                <!-- <div class="empty-cart">Giỏ hàng trống</div> -->
+                <div class="cart-item">
+                    <div class="cart-item-info">
+                        <div class="cart-item-title">Virus Covid 19</div>
+                        <div class="cart-item-price">50000 x 5</div>
+                    </div>
+                    <div class="quantity-controls">
+                        <button class="quantity-btn decrease-btn" data-id="${item.id}">
+                            -
+                        </button>
+                        <span>2</span>
+                        <button class="quantity-btn increase-btn" data-id="${item.id}">
+                            +
+                        </button>
+                        <button class="remove" data-id="${item.id}">X</button>
+                    </div>
+                </div>
+            </div>
+            <div class="cart-total" id="cart-total">Tổng: 0₫</div>
+            <button class="checkout-btn" id="checkout-btn">Thanh toán</button>
+        </div>
     </div>
     <script src="./demo.js"></script>
-  </body>
+</body>
+
 </html>
